--- a/about.html
+++ b/about.html
@@ -45,8 +45,25 @@
         <p>Service and Excellence</p>
         <div class="camprow">
             <div class="mission-col">
-                <h3>Integrity</h3>
-                <p>We value honest, dedication to work and we are committed to offer service that represents quality</p>
+                <h3>HISTORY</h3>
+                <p>ACEK ACADEMY
+                    Acek Academy was co-founded in the year 2000. The institution was
+                    offically registered with the department of education on 11.10.2002
+                    In the last two decades ACEK ACADEMY has successfully and diligently
+                    educated hundred folds of learners in our local communities and beyond.
+                    Our distinctive purpose statement the " SERVICE AND EXCELLENCE " has
+                    been achieved by the quality of our alumni students. <br>ACEK ACADEMY has
+                    produced successful young women and men, who have become medical
+                    academic doctors ( PHD HOLDERS), Engineers, Lawyers,
+                    doctors,
+                    Advocates of the high court, chartered accountants and many more.<br>
+                    We are also proud of many of our learners who ended up studying abroad
+                    in countries like the United States of America,Cyprus( Cyprus University)
+                    Ukraine and China.<br>
+
+                    Indeed at ACEK ACADEMY we offer" Quality cheaply and not cheap
+                    quality." Our institution is affordable with emphasis on premium brand
+                    quality of education.</p>
             </div>
     </section>
     <section class="mission">
@@ -75,25 +92,25 @@
 
     <section class="campus">
         <h1>School Management</h1>
-        <p>gfishdhfisdhfisf</p>
+        <p>#</p>
 
         <div class="rows">
             <div class="campus-col">
                 <img src="ai.jpeg">
                 <div class="layer">
-                    <h3>The Director</h3>
+                    <h3>The Director<br>Mr A Chalwe</h3>
                 </div>
             </div>
             <div class="campus-col">
                 <img src="ai.jpeg">
                 <div class="layer">
-                    <h3>The Principal</h3>
+                    <h3>The Principal<br> Mr P. Pagiwa</h3>
                 </div>
             </div>
             <div class="campus-col">
                 <img src="ai.jpeg">
                 <div class="layer">
-                    <h3>Vice Principal</h3>
+                    <h3>Vice Principal<br> Mr Shube</h3>
                 </div>
             </div>
         </div>
