--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section id="about" class="section about-section">
             <div class="section-content">
                 <h2>About Us</h2>
-                <p>Welcome to BBBB Academy! We are dedicated to providing high-quality education...</p>
+                <p>Welcome to Acek Academy! We...</p>
                 <a href="about.html" class="enrollbtn">Read More</a>
             </div>
         </section>
@@ -75,7 +75,7 @@
         <section id="academics" class="section academics-section">
             <div class="section-content">
                 <h2>Academics</h2>
-                <p>Our school offers a wide range of academic programs...</p>
+                <p>From grade R to Grade 12...</p>
                 <a href="#" class="enrollbtn">Read More</a>
             </div>
         </section>
@@ -83,7 +83,7 @@
         <section id="admissions" class="section admissions-section">
             <div class="section-content">
                 <h2>Admissions</h2>
-                <p>Learn about the admission process and requirements...</p>
+                <p>The admission process and requirements...</p>
                 <a href="#" class="enrollbtn">Read More</a>
             </div>
         </section>
@@ -109,7 +109,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <img src="ACEK.gif" class="logo">
-                <p> info@example.com</p>
+                <p> info@acekacademy.com</p>
                 <p>Phone: +123 456 789</p>
             </div>
             <div class="footer-section">
