--- a/about.html
+++ b/about.html
@@ -118,20 +118,18 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Quick Links</h3>
                 <img src="ACEK.gif" class="logo">
-                <p> info@example.com</p>
+                <p> info@acekacademy.com</p>
                 <p>Phone: +123 456 789</p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Courses</a></li>
-                    <li><a href="#">Admissions</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="#">QUICK TOUR</a></li>
+                    <li><a href="">ENROLLMENT INFO</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -139,8 +137,8 @@
                 <p><a href="https://maps.app.goo.gl/N7jHxMnHznUJ6x12A" target="_blank">18 William Lynn <br> Street<br> White river<br>South Africa</a></p>
             </div>
             <div class="footer-section">
-                <h3>Quick Links</h3>
                 <form action="contact_form" method="post">
+                    <h3>Quick Links</h3>
                     <label for="name">Your Name:<input type="text" id="name" name="name" required></label>
                     <label for="email">Your Email:<input type="email" id="email" name="email" required></label>
                     <label for="message">Message:<textarea id="message" name="message" required></textarea></label>
@@ -150,12 +148,13 @@
         </div>
         <hr>
         <div class="social-icons">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-youtube"></i>
+            <a href="https://www.facebook.com/acekacademyza"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/Acekacademy"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/acekacademy/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.youtube.com/@acekacademy362"><i class="fab fa-youtube"></i></a>
         </div>
+        
         <div class="copyright">
             <p>&copy;Acek Academy 2000 | All rights reserved. | <a href="https://ceaser.co.za" target="_blank"> Developed
                     by Ceaser Tech</a></p>
