--- a/index.html
+++ b/index.html
@@ -138,12 +138,13 @@
         </div>
         <hr>
         <div class="social-icons">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-youtube"></i>
+            <a href="https://www.facebook.com/acekacademyza"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/Acekacademy"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/acekacademy/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.youtube.com/@acekacademy362"><i class="fab fa-youtube"></i></a>
         </div>
+        
         <div class="copyright">
             <p>&copy;Acek Academy 2000 | All rights reserved. | <a href="https://ceaser.co.za" target="_blank"> Developed
                     by Ceaser Tech</a></p>
