--- a/application.html
+++ b/application.html
@@ -41,7 +41,7 @@
         </div>
     </header>
     <section class="campus">
-        <h1>About us</h1>
+        <h1>The enrolment process</h1>
         <p>Service and Excellence</p>
         <div class="camprow">
             <div class="mission-col">
