--- a/index.html
+++ b/index.html
@@ -106,36 +106,39 @@
             <p class="description">Description for Video 2</p>
         </div>
     </div>
-<footer class="bg-body-tertiary text-center">
-        <div class="footer-content">
-            <div class="footer-section">
-                <img src="ACEK.gif" class="logo">
-                <p> info@acekacademy.com</p>
-                <p>Phone: +123 456 789</p>
+<footer>
+        <div class="rowz">
+        <div class="colz">
+            <img src="ACEK.gif" class="logof">
+            <h3>Networks <div class="underline"><span></span></div></h3>
+            <p> Email: info@acekacademy.com</p>
+            <p>Phone: +27 13 880 0425</p>
+        </div>
+        <div class="colz">
+            <h3>Quick Links <div class="underline"><span></span></h3>
+            <ul>
+                <li><a href="index">Home</a></li>
+                <li><a href="about">ABOUT US</a></li>
+                <li><a href="application">ENROLLMENT INFO</a></li>
+                <li><a href="acekg">GALLERY</a></li>
+            </ul>
+        </div>
+        <div class="colz">
+            <h3>Address <div class="underline"><span></span></h3>
+                <p><a class="Address" href="https://maps.app.goo.gl/N7jHxMnHznUJ6x12A" target="_blank">18 William Lynn <br> Street<br> White river<br>South Africa</a></p>
+        </div>
+        <div class="colz">
+            <div class="form-cont">
+            <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="56b09d47-8791-41a7-bb84-096c227a74e3">
+                <h3>CONTACT US <div class="underline"><span></span></h3>
+                <label for="name">Your Name:<input type="text" id="name" name="name" required></label>
+                <label for="email">Your Email:<input type="email" id="email" name="email" required></label>
+                <label for="message">Message:<textarea id="message" name="message" required></textarea></label>
+                <input type="submit" value="Send Message">
             </div>
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">ABOUT US</a></li>
-                    <li><a href="#">QUICK TOUR</a></li>
-                    <li><a href="">ENROLLMENT INFO</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Address</h3>
-                <p><a href="https://maps.app.goo.gl/N7jHxMnHznUJ6x12A" target="_blank">18 William Lynn <br> Street<br> White river<br>South Africa</a></p>
-            </div>
-            <div class="footer-section">
-                <form action="contact_form" method="post">
-                    <h3>Quick Links</h3>
-                    <label for="name">Your Name:<input type="text" id="name" name="name" required></label>
-                    <label for="email">Your Email:<input type="email" id="email" name="email" required></label>
-                    <label for="message">Message:<textarea id="message" name="message" required></textarea></label>
-                    <input type="submit" value="Send Message">
-                </form>
-            </div>
+            </form>
+        </div>
         </div>
         <hr>
         <div class="social-icons">
@@ -145,7 +148,6 @@
             <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.youtube.com/@acekacademy362"><i class="fab fa-youtube"></i></a>
         </div>
-        
         <div class="copyright">
             <p>&copy;Acek Academy 2000 | All rights reserved. | <a href="https://ceaser.co.za" target="_blank"> Developed
                     by Ceaser Tech</a></p>
